--- a/_sass/base/foundation.scss
+++ b/_sass/base/foundation.scss
@@ -6,7 +6,9 @@ body {
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   -webkit-text-size-adjust: none;
 
-  @extend %u-textKern;
+  text-rendering: optimizeLegibility;
+  font-feature-settings: "kern" 1;
+  font-kerning: normal;
 
   overflow: hidden;
   overflow-y: auto;
@@ -29,8 +31,8 @@ main {
 }
 
 h1, h2, h3, h4, h5, h6, ul {
-  // margin: 0;
-  // padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 ul, ol {
