--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -1,8 +1,16 @@
 // http://name-of-color.com
-$color-ufoGreen: #38cb7d;
-$color-silverChalice: #acadae;
-$color-X11: #bbbcbd;
-$color-Charade: #2a2e39;
+// base
+$color-bunting:         #101b39;
+$color-portGore:        #352254;
+$color-rhino:           #2a3354;
+$color-pickledBluewood: #2e4e5a;
+
+// neons
+$color-dodgerBlue: #3faafb;
+$color-heliotrope: #ad5fff;
+$color-mandy:      #e9467e;
+$color-inchWorm:   #a5f312;
+$color-saffron:    #f4aa33;
 
 // White & Black
 $color-white: #fcfcfc;
