--- a/_sass/config.scss
+++ b/_sass/config.scss
@@ -41,11 +41,11 @@ $top-z:       5;
 // Fonts
 $ff-alfa: 'Josefin Sans', sans-serif;
 
-// $fs-little:     10px;
-// $fs-small:      14px;
+$fs-little:     12px;
+$fs-small:      14px;
 $fs-regular:    16px;
-// $fs-medium:     18px;
-// $fs-large:      20px;
+$fs-medium:     18px;
+$fs-large:      20px;
 $fs-big:        24px;
 // $fs-biggest:    28px;
 
