--- a/_sass/sections/social.scss
+++ b/_sass/sections/social.scss
@@ -16,7 +16,17 @@
 }
 
 .social-icon {
+  display: block;
 
+  width: 24px;
+  height: 24px;
+
+  > svg {
+    width: 100%;
+    height: 100%;
+
+    fill: rgba($color-white, 0.75);
+  }
 }
 
 .social-username {
