--- a/_sass/sections/hero.scss
+++ b/_sass/sections/hero.scss
@@ -4,20 +4,35 @@
   justify-content: center;
   align-items: center;
 
-  height: 100%;
+  min-height: 100%;
+
+  padding: 10px;
 
   text-align: center;
+
+  color: $color-white;
+
+  background: url('../images/bg.png') center center / cover no-repeat;
 }
 
 .hero-headline {
-  width: 400px;
-  height: 120px;
+  width: 200px;
+  height: 60px;
 
-  margin: 50px 0;
+  margin: 10px 0 15px;
+
+  font-size: $fs-medium;
 
   > svg {
+    width: 100%;
+    height: 100%;
 
+    fill: $color-white;
   }
+}
+
+.hero-date {
+  font-size: $fs-medium;
 }
 
 .hero-headlineText {
@@ -30,8 +45,22 @@
 }
 
 .hero-body {
-  margin: 50px 0;
+  margin: 0 0 20px;
+  padding: 0 20px;
 
-  font-size: $fs-big;
+  font-size: $fs-small;
   font-weight: $fw-medium;
+}
+
+.hero-register {
+  margin: 0 0 20px;
+  padding: 8px 25px;
+
+  font-size: $fs-large;
+
+  border-radius: 1px;
+  text-decoration: none;
+
+  color: $color-black;
+  background-color: rgba($color-white, 0.75);
 }
