--- a/_includes/icon-facebook.html
+++ b/_includes/icon-facebook.html
@@ -1,4 +1,4 @@
-<a class="social-link" href="https://facebook.com/{{ include.username }}">
+<a class="social-link" href="https://facebook.com/{{ include.username }}" target="_blank">
   <span class="social-icon social-icon--facebook">
     {% include icon-facebook.svg %}
   </span>
