--- a/_includes/icon-github.html
+++ b/_includes/icon-github.html
@@ -1,4 +1,4 @@
-<a class="social-link" href="https://github.com/{{ include.username }}">
+<a class="social-link" href="https://github.com/{{ include.username }}" target="_blank">
   <span class="social-icon social-icon--github">
     {% include icon-github.svg %}
   </span>
