--- a/_includes/icon-twitter.html
+++ b/_includes/icon-twitter.html
@@ -1,4 +1,4 @@
-<a class="social-link" href="https://twitter.com/{{ include.username }}">
+<a class="social-link" href="https://twitter.com/{{ include.username }}" target="_blank">
   <span class="social-icon social-icon--twitter">
     {% include icon-twitter.svg %}
   </span>
