--- a/_includes/sections/hero.html
+++ b/_includes/sections/hero.html
@@ -5,7 +5,7 @@
     <b class="hero-headlineText">{{ site.title }}</b>
   </h1>
 
-  <h2 class="hero-date">21-23 Octomber 2016<br><small>Bucharest - Chisinau</small></h2>
+  <h2 class="hero-date">21-23 Octomber 2016</h2>
 
   <section class="countdown" id="js-countdown">
     <div class="countdown-segment">
@@ -37,24 +37,6 @@
 
   <a class="hero-register" href="https://docs.google.com/forms/d/e/1FAIpQLSdLAVD14_u8vWKGQ2gLs8pLvVLSqFb36p_5kbic8gLZV5GPeQ/viewform" target="_blank">Register</a>
 
-  <ul class="social">
-    {% if site.github_username %}
-    <li>
-      {% include icon-github.html username=site.github_username %}
-    </li>
-    {% endif %}
-
-    {% if site.twitter_username %}
-    <li>
-      {% include icon-twitter.html username=site.twitter_username %}
-    </li>
-    {% endif %}
-
-    {% if site.facebook_username %}
-    <li>
-      {% include icon-facebook.html username=site.facebook_username %}
-    </li>
-    {% endif %}
-  </ul>
+  {% include social.html %}
 
 </article>
