--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
-  <link rel="stylesheet" href="/css/main.css?dm">
+  <link rel="stylesheet" href="/css/main.css?DEVMODE">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
 
   {% comment %}
