--- a/_sass/sections/countdown.scss
+++ b/_sass/sections/countdown.scss
@@ -2,14 +2,14 @@
   width: 100%;
   max-width: 300px;
 
-  margin: 20px 0;
+  margin: 0 0 20px;
 
   font-size: 0;
 
   @include media(medium) {
-    max-width: 400px;
+    max-width: 340px;
 
-    margin: 40px 0;
+    margin: 0 0 40px;
   }
 }
 
