--- a/_sass/sections/hero.scss
+++ b/_sass/sections/hero.scss
@@ -1,21 +1,15 @@
-.hero {
+.HeroSection {
+  height: 100vh;
+
+  overflow: hidden;
+  background-color: $color-pickledBluewood;
+
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
-
-  min-height: 100%;
-
-  padding: 10px;
-
-  text-align: center;
-
-  color: $color-white;
-
-  background: url('../images/bg.png') center center / cover no-repeat;
+  justify-content: center;
 }
 
-.hero-headline {
+.HeroSection-headline {
   width: 200px;
   height: 60px;
 
@@ -43,7 +37,7 @@
   }
 }
 
-.hero-headlineText {
+.HeroSection-headlineText {
   display: block;
 
   width: 0;
@@ -52,58 +46,58 @@
   overflow: hidden;
 }
 
-.hero-date {
-  margin: 0 0 20px;
+// .hero-date {
+//   margin: 0 0 20px;
 
-  font-size: $fs-medium;
+//   font-size: $fs-medium;
 
-  @include media(medium) {
-    margin: 0 0 40px;
+//   @include media(medium) {
+//     margin: 0 0 40px;
 
-    font-size: $fs-large;
-  }
+//     font-size: $fs-large;
+//   }
 
-  @include media(large) {
-    font-size: $fs-big;
-  }
-}
+//   @include media(large) {
+//     font-size: $fs-big;
+//   }
+// }
 
-.hero-body {
-  margin: 0 0 20px;
-  padding: 0 20px;
+// .hero-body {
+//   margin: 0 0 20px;
+//   padding: 0 20px;
 
-  font-size: $fs-small;
-  font-weight: $fw-medium;
-  line-height: 1.3;
+//   font-size: $fs-small;
+//   font-weight: $fw-medium;
+//   line-height: 1.3;
 
-  @include media(medium) {
-    margin: 0 0 30px;
+//   @include media(medium) {
+//     margin: 0 0 30px;
 
-    font-size: $fs-regular;
-  }
+//     font-size: $fs-regular;
+//   }
 
-  @include media(large) {
-    margin: 0 0 30px;
+//   @include media(large) {
+//     margin: 0 0 30px;
 
-    font-size: $fs-medium;
-  }
-}
+//     font-size: $fs-medium;
+//   }
+// }
 
-.hero-register {
-  margin: 0 0 20px;
-  padding: 8px 25px;
+// .hero-register {
+//   margin: 0 0 20px;
+//   padding: 8px 25px;
 
-  font-size: $fs-large;
+//   font-size: $fs-large;
 
-  border-radius: 1px;
-  text-decoration: none;
+//   border-radius: 1px;
+//   text-decoration: none;
 
-  color: $color-black;
-  background-color: rgba($color-white, 0.75);
+//   color: $color-black;
+//   background-color: rgba($color-white, 0.75);
 
-  @include media(medium) {
-    margin: 0 0 30px;
+//   @include media(medium) {
+//     margin: 0 0 30px;
 
-    font-size: $fs-big;
-  }
-}
+//     font-size: $fs-big;
+//   }
+// }
