menu functionality complete mobile

--- a/_includes/base/header.html
+++ b/_includes/base/header.html
@@ -1,13 +1,13 @@
 <header class="Header" role="banner">
 
   <nav class="Header-nav">
-    <a class="Header-logo" href="#">{% include icons/icon-logo-alt.svg %}</a>
+    <a class="Header-logo js-menuItem" href="#hero">{% include icons/icon-logo-alt.svg %}</a>
     <button class="Header-menuButton js-Header-menuButton">Menu</button>
     <ul class="Header-menu">
-      <li><a class="Header-menuItem">Idea</a></li>
-      <li><a class="Header-menuItem">About</a></li>
-      <li><a class="Header-menuItem">Agenda</a></li>
-      <li><a class="Header-menuItem">Sponsors</a></li>
+      <li><a class="Header-menuItem js-menuItem" href="#idea">Idea</a></li>
+      <li><a class="Header-menuItem js-menuItem" href="#about">About</a></li>
+      <li><a class="Header-menuItem js-menuItem" href="#agenda">Agenda</a></li>
+      <li><a class="Header-menuItem js-menuItem" href="#sponsors">Sponsors</a></li>
     </ul>
   </nav>
 
