--- a/_includes/sections/hero.html
+++ b/_includes/sections/hero.html
@@ -1,4 +1,4 @@
-<article class="HeroSection">
+<article class="HeroSection" id="hero">
 
   <h1 class="HeroSection-headline">
     {% include icons/icon-logo.svg %}
