--- a/_sass/base/foundation.scss
+++ b/_sass/base/foundation.scss
@@ -6,6 +6,8 @@ body {
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   -webkit-text-size-adjust: none;
 
+  color: $color-white;
+
   text-rendering: optimizeLegibility;
   font-feature-settings: "kern" 1;
   font-kerning: normal;
