--- a/_sass/config.scss
+++ b/_sass/config.scss
@@ -64,7 +64,9 @@ $fw-medium:  600;
 
   "sections/header",
   "sections/hero",
+  "sections/idea",
   "sections/about",
   "sections/agenda",
-  "sections/sponsors"
+  "sections/sponsors",
+  "sections/section"
 ;
