--- a/_sass/config.scss
+++ b/_sass/config.scss
@@ -62,6 +62,7 @@ $fw-medium:  600;
   "base/normalize",
   "base/foundation",
 
+  "sections/menu",
   "sections/header",
   "sections/hero",
   "sections/idea",
