Add autoprefixer and also add more css when in doubt just add more css

--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,3 +1,5 @@
 <article class="AboutSection Section" id="about">
-  <h1>About</h1>
+  <div class="Section-container">
+    <h1>About</h1>
+  </div>
 </article>
