--- a/_includes/sections/agenda.html
+++ b/_includes/sections/agenda.html
@@ -1,3 +1,5 @@
 <article class="AgendaSection Section" id="agenda">
-  <h1>Agenda</h1>
+  <div class="Section-container">
+    <h1>Agenda</h1>
+  </div>
 </article>
