--- a/_includes/sections/idea.html
+++ b/_includes/sections/idea.html
@@ -1,3 +1,5 @@
 <article class="IdeaSection Section" id="idea">
-  <h1>Idea</h1>
+  <div class="Section-container">
+    <h1>Idea</h1>
+  </div>
 </article>
