--- a/_sass/config.scss
+++ b/_sass/config.scss
@@ -45,7 +45,7 @@ $fs-regular:    16px;
 $fs-medium:     18px;
 // $fs-large:      20px;
 $fs-big:        24px;
-// $fs-biggest:    28px;
+$fs-bigger:     32px;
 
 // $fw-thin:    100;
 // $fw-light:   200;
