--- a/_includes/sections/sponsors.html
+++ b/_includes/sections/sponsors.html
@@ -1,3 +1,5 @@
 <article class="SponsorsSection Section" id="sponsors">
-  <h1>Sponsors</h1>
+  <div class="Section-container">
+    <h1>Sponsors</h1>
+  </div>
 </article>
