--- a/_sass/sections/hero.scss
+++ b/_sass/sections/hero.scss
@@ -5,15 +5,16 @@
   background-color: $color-pickledBluewood;
 
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
 .HeroSection-headline {
-  width: 200px;
-  height: 60px;
+  width: 250px;
+  height: 75px;
 
-  margin: 10px 0 15px;
+  margin: 0 0 calc(5vh + #{$spacing-unit * 3});
 
   font-size: $fs-medium;
 
@@ -25,10 +26,10 @@
   }
 
   @include media(medium) {
-    width: 300px;
-    height: 90px;
+    width: 350px;
+    height: 105px;
 
-    margin: 10px 0 30px;
+    margin: 0 0 calc(5vh + #{$spacing-unit * 3});
   }
 
   @include media(large) {
