--- a/_sass/config.scss
+++ b/_sass/config.scss
@@ -39,11 +39,11 @@ $top-z:       5;
 // Fonts
 $ff-alfa: 'Josefin Sans', sans-serif;
 
-// $fs-little:     12px;
+$fs-little:     12px;
 // $fs-small:      14px;
 $fs-regular:    16px;
 $fs-medium:     18px;
-// $fs-large:      20px;
+$fs-large:      20px;
 $fs-big:        24px;
 $fs-bigger:     32px;
 
@@ -69,5 +69,6 @@ $fw-medium:  600;
   "sections/about",
   "sections/agenda",
   "sections/sponsors",
-  "sections/section"
+  "sections/section",
+  "sections/countdown"
 ;
