--- a/_sass/sections/countdown.scss
+++ b/_sass/sections/countdown.scss
@@ -1,43 +1,44 @@
-// .countdown {
-//   width: 100%;
-//   max-width: 300px;
+.Countdown {
+  width: 280px;
+  margin: 0 0 20px;
 
-//   margin: 0 0 20px;
+  font-size: 0;
 
-//   font-size: 0;
+  text-align: center;
 
-//   @include media(medium) {
-//     max-width: 340px;
+  @include media(medium) {
+    width: 400px;
 
-//     margin: 0 0 40px;
-//   }
-// }
+    margin: 0 0 40px;
+  }
+}
 
-// .countdown-segment {
-//   display: inline-block;
-//   vertical-align: middle;
+.Countdown-segment {
+  display: inline-block;
+  vertical-align: middle;
 
-//   width: 25%;
-// }
+  width: 25%;
+}
 
-// .countdown-time {
-//   display: block;
-//   margin: 0 0 5px;
+.Countdown-time {
+  display: block;
+  margin: 0 0 5px;
 
-//   font-size: $fs-large;
+  font-size: $fs-large;
 
-//   @include media(medium) {
-//     font-size: $fs-big;
-//   }
-// }
+  @include media(medium) {
+    font-size: $fs-big;
+  }
+}
 
-// .countdown-label {
-//   display: block;
+.Countdown-label {
+  display: block;
 
-//   font-size: $fs-little;
-//   text-transform: lowercase;
+  font-size: $fs-little;
+  font-weight: $fw-medium;
+  text-transform: lowercase;
 
-//   @include media(medium) {
-//     font-size: $fs-medium;
-//   }
-// }
+  @include media(medium) {
+    font-size: $fs-medium;
+  }
+}
