--- a/_sass/sections/hero.scss
+++ b/_sass/sections/hero.scss
@@ -14,7 +14,7 @@
   width: 250px;
   height: 75px;
 
-  margin: 0 0 calc(5vh + #{$spacing-unit * 3});
+  margin: 0 0 calc(5vh + #{$spacing-unit});
 
   font-size: $fs-medium;
 
