Idea + About content

--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,5 +1,32 @@
 <article class="AboutSection Section" id="about">
   <div class="Section-container">
     <h1>About</h1>
+    <h2>The story</h2>
+    <p>JSHacks initiative originated in Bucharest/Romania after a group of fellow JavaScript meetup organizers decided it was time go beyond meetups, to bridge the gap across local JavaScript communities worldwide and empower developers to collaborate on various initiatives and projects regardless of their location.</p>
+    <p>JSHacks is an event dedicated to JavaScript developers and their communities.It brings together both novices and veterans alike and provides a supportive, collaborative and challenging environment with the aim of empowering individuals and nurturing communities.</p>
+    <p>First edition takes place simultaneously in Bucharest/Romania and Chisinau/Moldova on 21-23 October, 2016.</p>
+    <p>We invite all JavaScript meetup organizers and community leaders to join the initiative and facilitate the next JSHacks in your own local community. Get in touch and be part of the Global JSHacks community!</p>
+
+    <h2>Organizing Team</h2>
+    <ul>
+      <li>Andrei Antal - AngularJS Bucharest</li>
+      <li>Andreas Fruth - Meteor Romania</li>
+      <li>Ciprian Borodescu - BucharestJS</li>
+      <li>Constantin Dumitrescu - The JSON Architecture Creator</li>
+      <li>Diana Miron - jsGirls Romania</li>
+      <li>Nicoleta Iliuha - JavascriptMD</li>
+      <li>Valentin Tureac - Frontend Bucharest</li>
+    </ul>
+
+
+    <h2>Organizing JS Communities</h2>
+    <ul>
+      <li>AngularJS Bucharest</li>
+      <li>BucharestJS</li>
+      <li>Frontend Bucharest</li>
+      <li>JavascriptMD</li>
+      <li>jsGirls Romania</li>
+      <li>Meteor Romania</li>
+    </ul>
   </div>
 </article>
