--- a/_includes/sections/idea.html
+++ b/_includes/sections/idea.html
@@ -1,5 +1,21 @@
 <article class="IdeaSection Section" id="idea">
   <div class="Section-container">
     <h1>Idea</h1>
+    <h2>What is JSHacks?</h2>
+    <p>JSHacks is an event dedicated to JavaScript developers and their communities.</p>
+    <p>It’s aim is to foster the ever growing network of developers, bridge geographical sparse and niched communities, enable learning through knowledge sharing activities and finally empower participants to be social champions by tackling society’s biggest issues through 24h coding challenges.</p>
+    <p>The social coding experience is the central hub of the event and the main driver of collaboration and knowledge sharing while hands-on mentorship, workshops, trainings, talks and an event-ready development infrastructure provide the means.</p>
+    <p>The first edition takes place on the <strong>21-23 October</strong>, in two locations simultaneously: Bucharest/Romania & Chisinau/Moldova. This edition’s theme is “Open Data” and we’re getting together to solve challenges such as:
+
+      <br></br>
+      Unifying the available data from data.gov.ro into a common format</br>
+      Using APIs for Transport/Infrastructure for Smart City solutions</br>
+      Access to anonymous medical data</br>
+      Machine Learning on financial data for the estimation of the budget for the next period (regression)<br>
+      and more...
+
+    </p>
+    <p>Have your own challenge you want to hack? Join us and let’s build a solution together!</p>
+    <p>Make friends, make products, make a difference … and continue in doing so after the event!</p>
   </div>
 </article>
