fix default.html symlink

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
-  {% include base/head.html %}
+  {% include head.html %}
 
   <body>
 
-    {% include base/header.html %}
+    {% include header.html %}
 
     <main aria-label="Content">
       {{ content }}
