fix symlink default.html

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <nav class="Header-nav">
     <a class="Header-logo js-Menu-item" href="#hero">{% include icons/icon-logo-alt.svg %}</a>
     <button class="Header-menuButton js-Header-menuButton">Menu</button>
-    {% include base/menu.html %}
+    {% include menu.html %}
   </nav>
 
 </header>
