--- a/_includes/sections/hero.html
+++ b/_includes/sections/hero.html
@@ -27,7 +27,7 @@
     </div>
   </section>
 
-  {% include base/menu.html %}
+  {% include menu.html %}
 
   <a class="hero-register" href="https://docs.google.com/forms/d/e/1FAIpQLSdLAVD14_u8vWKGQ2gLs8pLvVLSqFb36p_5kbic8gLZV5GPeQ/viewform" target="_blank">Register</a>
 
