--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="Header" role="banner">
 
   <nav class="Header-nav">
-    <a class="Header-logo js-Menu-item" href="#hero">{% include icons/icon-logo-alt.svg %}</a>
+    <a class="Header-logo js-Menu-item" href="#hero">{% include icon-logo-alt.svg %}</a>
     <button class="Header-menuButton js-Header-menuButton">Menu</button>
     {% include menu.html %}
   </nav>
