fix file structure

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,7 +1,7 @@
 <article class="HeroSection" id="hero">
 
   <h1 class="HeroSection-headline">
-    {% include icons/icon-logo.svg %}
+    {% include icon-logo.svg %}
     <b class="HeroSection-headlineText">{{ site.title }}</b>
   </h1>
 
