--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -5,35 +5,12 @@
     <b class="HeroSection-headlineText">{{ site.title }}</b>
   </h1>
 
-  <section class="Countdown" id="js-countdown">
-    <div class="Countdown-segment">
-      <span class="Countdown-time js-Countdown-days"></span>
-      <span class="Countdown-label">Days</span>
-    </div>
-
-    <div class="Countdown-segment">
-      <span class="Countdown-time js-Countdown-hours"></span>
-      <span class="Countdown-label">Hours</span>
-    </div>
-
-    <div class="Countdown-segment">
-      <span class="Countdown-time js-Countdown-minutes"></span>
-      <span class="Countdown-label">Minutes</span>
-    </div>
-
-    <div class="Countdown-segment">
-      <span class="Countdown-time js-Countdown-seconds"></span>
-      <span class="Countdown-label">Seconds</span>
-    </div>
-  </section>
+  <p>21-23 October 2016</p>
 
   {% include menu.html %}
 
-  <a class="hero-register" href="https://docs.google.com/forms/d/e/1FAIpQLSdLAVD14_u8vWKGQ2gLs8pLvVLSqFb36p_5kbic8gLZV5GPeQ/viewform" target="_blank">Register</a>
-
   {% comment %}
-
-    <h2 class="hero-date">21-23 Octomber 2016</h2>
+    <a class="hero-register" href="https://docs.google.com/forms/d/e/1FAIpQLSdLAVD14_u8vWKGQ2gLs8pLvVLSqFb36p_5kbic8gLZV5GPeQ/viewform" target="_blank">Register</a>
 
     <section class="countdown" id="js-countdown">
       <div class="countdown-segment">
