--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -1,5 +1,19 @@
 <article class="SponsorsSection Section" id="sponsors">
   <div class="Section-container">
     <h1>Sponsors</h1>
+    <h2>PLATINUM</h2>
+    <ul class="AboutSection-communitiesList">
+      <li><a href="https://everymatrix.com/" class="AboutSection-communitiesLink" target="_blank"><img src="../images/everymatrix-logo.png" alt="AngularJS"></a></li>
+    </ul>
+
+    {% comment %}<h2>GOLD</h2>{% endcomment %}
+
+    <h2>SILVER</h2>
+     <ul class="AboutSection-communitiesList">
+      <li><a href="https://bucharest.techhub.com/" class="AboutSection-communitiesLink" target="_blank"><img src="../images/techhub_3d_logo_png.png" alt="Techhub"></a></li>
+      <li><a href="http://2016.howtoweb.co/" class="AboutSection-communitiesLink" target="_blank"><img src="../images/HTW-logo.png" alt="How To Web"></a></li>
+    </ul>
+
+    <h1>Partners</h1>
   </div>
 </article>
