--- a/_sass/config.scss
+++ b/_sass/config.scss
@@ -46,6 +46,7 @@ $fs-medium:     18px;
 $fs-large:      20px;
 $fs-big:        24px;
 $fs-bigger:     32px;
+$fs-biggest:    40px;
 
 // $fw-thin:    100;
 // $fw-light:   200;
