--- a/_sass/sections/hero.scss
+++ b/_sass/sections/hero.scss
@@ -3,6 +3,7 @@
 
   overflow: hidden;
   background-color: $color-pickledBluewood;
+  // background: url('../images/bg.png') center center no-repeat;
 
   display: flex;
   flex-direction: column;
