--- a/_sass/sections/menu.scss
+++ b/_sass/sections/menu.scss
@@ -33,7 +33,10 @@ $menu-item-height: $spacing-unit * 6;
       height: auto;
       margin: 0 0 $spacing-unit * 3;
 
-      > li { display: block; height: auto; }
+      > li {
+        display: block;
+        height: auto;
+      }
     }
   }
 
