--- a/_includes/agenda.html
+++ b/_includes/agenda.html
@@ -1,5 +1,9 @@
 <article class="AgendaSection Section" id="agenda">
   <div class="Section-container">
     <h1>Agenda</h1>
+    <h2>Mentors</h2>
+    <p>To be announced...</p>
+    <h2>Special Guests</h2>
+    <p>To be announced...</p>
   </div>
 </article>
