--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,6 +1,6 @@
 <ul class="Menu">
-  <li><a class="Menu-item js-Menu-item" href="#idea">Idea</a></li>
-  <li><a class="Menu-item js-Menu-item" href="#about">About</a></li>
+  <li><a class="Menu-item js-Menu-item" href="#jshacks">What is JSHacks</a></li>
+  <li><a class="Menu-item js-Menu-item" href="#story">Story</a></li>
   <li><a class="Menu-item js-Menu-item" href="#agenda">Agenda</a></li>
   <li><a class="Menu-item js-Menu-item" href="#sponsors">Sponsors</a></li>
 </ul>
