--- a/_sass/base/foundation.scss
+++ b/_sass/base/foundation.scss
@@ -41,7 +41,12 @@ h1, h2, h3, h4, h5, h6, ul {
 }
 
 p {
+  font-size: $fs-regular;
   font-weight: $fw-medium;
+
+  @include media(medium) {
+    font-size: $fs-large;
+  }
 }
 
 ul, ol {
