--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -5,7 +5,7 @@
     <b class="HeroSection-headlineText">{{ site.title }}</b>
   </h1>
 
-  <p>21-23 October 2016</p>
+  <p class="HeroSection-date">21-23 October 2016</p>
 
   {% include menu.html %}
 
