--- a/_sass/sections/hero.scss
+++ b/_sass/sections/hero.scss
@@ -30,7 +30,7 @@
     width: 350px;
     height: 105px;
 
-    margin: 0 0 calc(5vh + #{$spacing-unit * 3});
+    margin: 0 0 calc(5vh + #{$spacing-unit});
   }
 
   @include media(large) {
@@ -46,6 +46,10 @@
   height: 0;
 
   overflow: hidden;
+}
+
+.HeroSection-date {
+  margin: 0 0 $spacing-unit * 4;
 }
 
 .hero-register {
