--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -2,18 +2,19 @@
   <div class="Section-container">
     <h1>Sponsors</h1>
     <h2>PLATINUM</h2>
-    <ul class="AboutSection-communitiesList">
-      <li><a href="https://everymatrix.com/" class="AboutSection-communitiesLink" target="_blank"><img src="../images/everymatrix-logo.png" alt="AngularJS"></a></li>
-    </ul>
+    <a href="https://everymatrix.com/" class="SponsorsSection-everymatrix" target="_blank"><img src="../images/everymatrix.png" alt="AngularJS"></a>
 
     {% comment %}<h2>GOLD</h2>{% endcomment %}
 
     <h2>SILVER</h2>
-     <ul class="AboutSection-communitiesList">
-      <li><a href="https://bucharest.techhub.com/" class="AboutSection-communitiesLink" target="_blank"><img src="../images/techhub_3d_logo_png.png" alt="Techhub"></a></li>
-      <li><a href="http://2016.howtoweb.co/" class="AboutSection-communitiesLink" target="_blank"><img src="../images/HTW-logo.png" alt="How To Web"></a></li>
+     <ul class="AboutSection-communitiesList" style="margin-bottom: 60px;">
+      <li><a href="https://bucharest.techhub.com/" class="AboutSection-communitiesLink" target="_blank"><img src="../images/techhub.png" alt="Techhub"></a></li>
+      <li><a href="http://2016.howtoweb.co/" class="AboutSection-communitiesLink" target="_blank"><img src="../images/howtoweb.png" alt="How To Web"></a></li>
     </ul>
 
     <h1>Partners</h1>
+     <ul class="AboutSection-communitiesList">
+      <li><a href="https://bucharest.techhub.com/" class="AboutSection-communitiesLink" target="_blank"><img src="../images/code4romania.png" alt="Techhub"></a></li>
+      <li><a href="http://2016.howtoweb.co/" class="AboutSection-communitiesLink" target="_blank"><img src="../images/govithub.png" alt="How To Web"></a></li>
   </div>
 </article>
