--- a/css/airspace.css
+++ b/css/airspace.css
@@ -11,7 +11,7 @@
 @import url(http://fonts.googleapis.com/css?family=Volkhov:400italic);
 /* var text-decoration */
 /*--
-	Common Css
+  Common Css
 --*/
 body {
   font-family: 'Open Sans', sans-serif;
@@ -68,7 +68,7 @@ a:active {
   letter-spacing: normal;
 }
 /*--
-	Header Start
+  Header Start
 --*/
 header {
   background: #fff;
@@ -98,16 +98,15 @@ font header .navbar-default .navbar-nav li a:hover {
   color: #000;
 }
 /*---------------------------------------------
-					Index Start
+          Index Start
 -----------------------------------------------*/
 /*--
-	Slider Start
+  Slider Start
 --*/
 #slider {
   background: url("../img/slider-bg.jpg") no-repeat;
   background-size: cover;
-  background-attachment: fixed;
-  background-position: 10% 0%;
+  background-position: center;
   padding: 200px 0 280px 0;
   position: relative;
 }
@@ -154,7 +153,7 @@ font header .navbar-default .navbar-nav li a:hover {
   border-radius: 10px;
 }
 /*--
-	wrapper Start
+  wrapper Start
 --*/
 #intro {
   padding: 100px 0;
@@ -179,7 +178,7 @@ font header .navbar-default .navbar-nav li a:hover {
   padding-top: 20px;
 }
 /*--
-	service Start
+  service Start
 --*/
 #service {
   text-align: center;
@@ -205,7 +204,7 @@ font header .navbar-default .navbar-nav li a:hover {
   line-height: 1.8;
 }
 /*--
-	call-to-action Start
+  call-to-action Start
 --*/
 #call-to-action {
   background: url("../img/call-to-action-bg.jpg") no-repeat;
@@ -247,7 +246,7 @@ font header .navbar-default .navbar-nav li a:hover {
   margin-top: 30px;
 }
 /*--
-	Feature Start
+  Feature Start
 --*/
 #feature {
   background: url("../img/featue-bg.jpg");
@@ -296,7 +295,7 @@ font header .navbar-default .navbar-nav li a:hover {
 }
 
 /*--
-	content Start
+  content Start
 --*/
 #testimonial {
   padding: 100px 0;
@@ -331,7 +330,11 @@ font header .navbar-default .navbar-nav li a:hover {
   width: 75%;
   border: 1px solid #DEDEDE;
   padding: 24px;
-  margin: 0 auto;
+  margin: 0 auto 40px;
+}
+#testimonial .testimonial-carousel a {
+  color: black;
+  text-decoration: underline !important;
 }
 #testimonial .testimonial-carousel img {
   padding-bottom: 38px;
@@ -341,7 +344,15 @@ font header .navbar-default .navbar-nav li a:hover {
   font-weight: 300;
   padding-bottom: 20px;
 }
+#testimonial .testimonial-carousel .user {
+  margin: 0 auto 20px;
+  width: 120px;
+  height: 120px;
+}
 #testimonial .testimonial-carousel .user img {
+  width: 100%;
+  height: 100%;
+
   padding-bottom: 0px;
   border-radius: 500px;
 }
@@ -371,20 +382,26 @@ font header .navbar-default .navbar-nav li a:hover {
   border: 0px;
 }
 /*--
-	features Start
+  features Start
 --*/
 #clients-logo-section {
   padding-top: 30px;
   padding-bottom: 75px;
 }
 #clients-logo-section .clients-logo-img {
-  padding: 0px 50px;
+  padding: 0px 5px;
+  width: 120px;
+  height: 120px;
+}
+
+.clients-logo-img > img {
+  width: 100%;
 }
 /*---------------------------------------------
-					Work Start
+          Work Start
 -----------------------------------------------*/
 /*--
-	Slider-work Start
+  Slider-work Start
 --*/
 #global-header {
   background: url("../img/slider-bg.jpg") no-repeat;
@@ -427,7 +444,7 @@ font header .navbar-default .navbar-nav li a:hover {
   word-spacing: 3px;
 }
 /*--
-	portfolio-work Start
+  portfolio-work Start
 --*/
 #portfolio-work {
   overflow: hidden;
@@ -563,7 +580,7 @@ font header .navbar-default .navbar-nav li a:hover {
   display: none;
 }
 /*--
-	wrapper-work Start
+  wrapper-work Start
 --*/
 #wrapper-work {
   overflow: hidden;
@@ -613,7 +630,7 @@ font header .navbar-default .navbar-nav li a:hover {
   padding-right: 80px;
 }
 /*--
-	features-work Start
+  features-work Start
 --*/
 #features-work {
   padding-top: 50px;
@@ -626,14 +643,14 @@ font header .navbar-default .navbar-nav li a:hover {
   padding: 40px 0px;
 }
 /*---------------------------------------------
-					Work Close
+          Work Close
 -----------------------------------------------*/
 /*=============================================*/
 /*---------------------------------------------
-					 Contact Start
+           Contact Start
 -----------------------------------------------*/
 /*--
-	slider-contact Start
+  slider-contact Start
 --*/
 #slider-contact {
   background: url("../img/slider-bg.jpg") no-repeat;
@@ -676,7 +693,7 @@ font header .navbar-default .navbar-nav li a:hover {
   word-spacing: 3px;
 }
 /*--
-	contact-form Start
+  contact-form Start
 --*/
 #contact-form {
   padding-top: 70px;
@@ -714,7 +731,7 @@ font header .navbar-default .navbar-nav li a:hover {
   font-size: 18px;
 }
 /*--
-	wrapper-contact Start
+  wrapper-contact Start
 --*/
 .address-block li {
   margin-bottom: 20px;
@@ -766,7 +783,7 @@ font header .navbar-default .navbar-nav li a:hover {
   display: block;
 }
 /*--
-	features-contact Start
+  features-contact Start
 --*/
 #features-contact {
   padding-top: 50px;
@@ -779,7 +796,7 @@ font header .navbar-default .navbar-nav li a:hover {
   padding: 40px 0px;
 }
 /*---------------------------------------------
-					Contact Close
+          Contact Close
 -----------------------------------------------*/
 /*--------- Heading------------*/
 .heading {
@@ -800,7 +817,7 @@ font header .navbar-default .navbar-nav li a:hover {
 }
 /*---------------------------*/
 /*--
-	footer Start
+  footer Start
 --*/
 footer {
   background: #F5F5F5;
